# DeepTextSearch

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  setup.py
DeepTextSearch/: DeepTextSearch.py  __init__.py  config.py  embedder.py  requirements.txt  reranker.py  searcher.py
DeepTextSearch/agents/: __init__.py  langchain_retriever.py  llamaindex_retriever.py  mcp_server.py  tool_interface.py
DeepTextSearch/vectorstores/: __init__.py  base.py  chroma_store.py  faiss_store.py  mongo_store.py  postgres_store.py  qdrant_store.py
Demo/: 01_basic_search.py  02_hybrid_search_modes.py  03_reranking.py  04_metadata_filtering.py  05_save_load_index.py  06_incremental_indexing.py  07_csv_dataframe_loading.py  08_multiple_models.py  09_faiss_index_types.py  10_rag_pipeline.py  11_agent_tool.py  Deep Text Search Demo.ipynb  DeepTextSearchDemo.py
Documents/: 01_Getting_Started.md  02_Embeddings.md  03_Search_Engine.md  04_Vector_Stores.md  05_Reranking.md  06_Agentic_Integration.md  07_Data_Loading.md  08_API_Reference.md  Document.md
notebooks/: 01_case_study_news_search.ipynb  02_case_study_rag_pipeline.ipynb  03_case_study_ecommerce_product_search.ipynb
